--- a/poetry/rings.tex
+++ b/poetry/rings.tex
@@ -32,6 +32,9 @@
     \maketop
 
     \section{Preface}
+    This is an exploration of AI-aided creativity.
+    Thanks to my (shadow) co-writer Gemini for being a sport. Sparring with you taught me a few
+    prompt formulations that would otherwise not occur to me. See an excerpt from our early exchanges below.
     *A note on the shift in perspective*: I've incorporated both first and third-person perspectives to offer a more
     nuanced and immersive experience. The first-person perspective allows for a more personal and intimate exploration
     of the poet's experiences, while the third-person perspective provides a broader, more objective view.
