Add pre-commit hooks

--- a/poetry/rings.tex
+++ b/poetry/rings.tex
@@ -21,7 +21,7 @@
     \maketitle
     \makededication
 
-% Number pages with small roman numerals (i, ii, iii, iv...)
+% Number pages with small roman numerals (i, ii, iii, iv…)
     \frontmatter
 
 % TOC %
@@ -52,7 +52,7 @@
         \begin{altverse}
 % Incipits are used in the ToP if no title is given.
             \incipit{Grandiose webs, neural mystic mazes},\\*
-            Thoughts intertwine in twilight's hazy phases!\\*
+            Thoughts intertwine in twilight's hazy phases.\\*
             A symphony of minds, a telepathic trance,\\*
             The chorus of one soul to a cosmic dance.
         \end{altverse}
