--- a/templates/poems.tex
+++ b/templates/poems.tex
@@ -74,7 +74,7 @@ Had worn them really about the same, \\!
 
 And both that morning equally lay \\
 In leaves no step had trodden black \\
-Oh, I kept the first for another day! \\
+Oh, I kept the first for another day. \\
 Yet knowing how way leads on to way, \\
 I doubted if I should ever come back. \\!
 
@@ -178,7 +178,7 @@ Oh my darling Clementine \\!
 Thou lovely and beloved, thou my love; \\
 Whose kiss seems still the first; whose summoning eyes, \\
 Even now, as for our love-world's new sunrise, \\
-Shed very dawn; whose voice, attuned above \\
+Shed dawn; whose voice, attuned above \\
 All modulation of the deep-bowered dove, \\
 Is like a hand laid softly on the soul; \\
 Whose hand is like a sweet voice to control \\
@@ -213,7 +213,7 @@ O lovely and beloved, O my love? \\!
 If you can keep your head when all about you \\
 Are losing theirs and blaming it on you; \\
 If you can trust yourself when all men doubt you, \\
-But make allowance for their doubting too: \\
+but make allowance for their doubting too: \\
 If you can wait and not be tired by waiting, \\
 Or, being lied about, don't deal in lies, \\
 Or being hated don't give way to hating, \\
